--- a/Guess Number/StateMachine.xaml
+++ b/Guess Number/StateMachine.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="StateMachine" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="842.4,701.6" sap2010:WorkflowViewState.IdRef="StateMachine_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="StateMachine" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="797.6,701.6" sap2010:WorkflowViewState.IdRef="StateMachine_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -105,7 +105,7 @@
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
           <Transition.To>
-            <State x:Name="__ReferenceID0" DisplayName="State" sap:VirtualizedContainerService.HintSize="420,877.6" sap2010:WorkflowViewState.IdRef="State_3">
+            <State x:Name="__ReferenceID0" DisplayName="State" sap:VirtualizedContainerService.HintSize="133.6,61.6" sap2010:WorkflowViewState.IdRef="State_3">
               <State.Entry>
                 <Sequence sap:VirtualizedContainerService.HintSize="375.2,434.4" sap2010:WorkflowViewState.IdRef="Sequence_2">
                   <sap:WorkflowViewStateService.ViewState>
@@ -120,7 +120,7 @@
                   </ui:InputDialog>
                   <Assign sap:VirtualizedContainerService.HintSize="333.6,60" sap2010:WorkflowViewState.IdRef="Assign_6">
                     <Assign.To>
-                      <OutArgument x:TypeArguments="x:Int32">[Counter]</OutArgument>
+                      <OutArgument x:TypeArguments="x:Int32">[Number_Of_Attempts]</OutArgument>
                     </Assign.To>
                     <Assign.Value>
                       <InArgument x:TypeArguments="x:Int32">[Number_Of_Attempts+1]</InArgument>
@@ -136,10 +136,10 @@
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
               <State.Transitions>
-                <Transition DisplayName="Guess Smaller Number" sap:VirtualizedContainerService.HintSize="461.6,509.6" sap2010:WorkflowViewState.IdRef="Transition_3">
+                <Transition DisplayName="Guess Smaller Number" sap:VirtualizedContainerService.HintSize="468,511.2" sap2010:WorkflowViewState.IdRef="Transition_3">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                      <av:PointCollection x:Key="ConnectorLocation">233.2,366.92 213.28,366.92 213.28,430.8 273.28,430.8 273.28,400.8</av:PointCollection>
+                      <av:PointCollection x:Key="ConnectorLocation">233.2,366.92 213.28,366.92 213.28,430.8 268,430.8 268,416.8 273.28,416.8 273.28,400.8</av:PointCollection>
                       <x:Int32 x:Key="SrcConnectionPointIndex">33</x:Int32>
                       <x:Int32 x:Key="DestConnectionPointIndex">23</x:Int32>
                     </scg:Dictionary>
@@ -151,10 +151,10 @@
                     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="333.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Try Smaller Number&quot;]" />
                   </Transition.Action>
                   <Transition.Condition>
-                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="GuessNumber&gt;RandomNumber And Number_Of_Attempts&lt;Counter" />
+                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="GuessNumber&gt;RandomNumber and Number_Of_Attempts&lt;=Counter" />
                   </Transition.Condition>
                 </Transition>
-                <Transition DisplayName="Guess Larger Number" sap:VirtualizedContainerService.HintSize="461.6,509.6" sap2010:WorkflowViewState.IdRef="Transition_4">
+                <Transition DisplayName="Guess Larger Number" sap:VirtualizedContainerService.HintSize="471.2,509.6" sap2010:WorkflowViewState.IdRef="Transition_4">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <av:PointCollection x:Key="ConnectorLocation">320.04,400.8 320.04,420.76 396.8,420.76 396.8,360.76 366.8,360.76</av:PointCollection>
@@ -169,7 +169,7 @@
                     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="333.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;Try Bigger Number&quot;]" />
                   </Transition.Action>
                   <Transition.Condition>
-                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="GuessNumber&lt;RandomNumber And Number_Of_Attempts&lt;Counter" />
+                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="GuessNumber&lt;RandomNumber  and Number_Of_Attempts&lt;=Counter" />
                   </Transition.Condition>
                 </Transition>
                 <Transition DisplayName="No Attempts" sap:VirtualizedContainerService.HintSize="448.8,509.6" sap2010:WorkflowViewState.IdRef="Transition_6">
@@ -195,7 +195,7 @@
                     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="333.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_4" Text="[&quot;Better Luck Next Time&quot;]" />
                   </Transition.Action>
                   <Transition.Condition>
-                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="Number_Of_Attempts=Counter" />
+                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="Number_Of_Attempts&gt;Counter" />
                   </Transition.Condition>
                 </Transition>
                 <Transition DisplayName="Correct Guess" sap:VirtualizedContainerService.HintSize="448.8,509.6" sap2010:WorkflowViewState.IdRef="Transition_5">
@@ -220,9 +220,7 @@
                   <Transition.Action>
                     <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="333.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_3" Text="[&quot;Congrats You have Guesed Correct Number&quot;]" />
                   </Transition.Action>
-                  <Transition.Condition>
-                    <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="GuessNumber=RandomNumber" />
-                  </Transition.Condition>
+                  <Transition.Condition>[GuessNumber=RandomNumber]</Transition.Condition>
                 </Transition>
               </State.Transitions>
             </State>
@@ -237,7 +235,11 @@
       <Variable x:TypeArguments="x:Int32" Default="[New Random().Next(1,99)]" Name="RandomNumber" />
       <Variable x:TypeArguments="x:Int32" Name="GuessNumber" />
       <Variable x:TypeArguments="x:Int32" Default="1" Name="Number_Of_Attempts" />
-      <Variable x:TypeArguments="x:Int32" Default="5" Name="Counter" />
+      <Variable x:TypeArguments="x:Int32" Name="Counter">
+        <Variable.Default>
+          <Literal x:TypeArguments="x:Int32" Value="3" />
+        </Variable.Default>
+      </Variable>
     </StateMachine.Variables>
   </StateMachine>
 </Activity>
